[tool.poetry]
name = "courier"
version = "1.0.0"
description = ""
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
aiohttp = "^3.8.5"
yarl = "^1.9.2"
uvicorn = "^0.23.1"
jinja2 = "^3.1.2"
path = "^16.7.1"
tomlkit = "^0.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
